day-9/ingress-5.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Annotation to rewrite the target URL
spec:
  rules:
  - http:
      paths:
      - path: /  # Path for the ingress
        pathType: Prefix
        backend: 
          service:
            name: giropops-senhas  # Name of the backend service
            port: 
              number: 5000  # Port number of the backend service
